--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
 <body>
   <div class="container">
     <div class="row">
-      <div id="biz">
-   
+      <div>
+        <span id="biz"><img id="logo"></span>
       </div>
     </div>
     <div class="row displays">
       <h5>
-        FaceBook Ad's Performance:
+        FaceBook Ad Performance:
       </h5>
       <div id="facebook">
       
@@ -24,7 +24,7 @@
     </div>
     <div class="row displays">
       <h5>
-        Google Ad's Performance:
+        Google Ad Performance:
       </h5>
       <div id="google">
       
